Fix top cut off

--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 body {
     background-color: #252525;
     color: #eeeeee;
+    margin-top: 5rem;
 }
 
 ::selection {
@@ -23,17 +24,12 @@ a:hover {
     margin-right: 1.5em;
 }
 
-
 /* Dark mode modals :womk: */
 
-.ui.modal.inverted.transition.visible.active,
-.ui.modal.inverted.transition.animating,
-.ui.modal>.content {
+.ui.modal.inverted.transition.visible.active, .ui.modal.inverted.transition.animating, .ui.modal>.content {
     background-color: #303030 !important;
     color: #eeeeee !important;
 }
-
-
 
 .ui.modal.inverted>.icon:first-child+* {
     background-color: #282828 !important;
@@ -47,12 +43,10 @@ a:hover {
     box-shadow: 0px 1px 3px 0px #353535, 0px 0px 0px 1px #353535 !important;
 }
 
-.ui.cards>.inverted.card>.content>.header,
-.ui.card>.content>.header {
+.ui.cards>.inverted.card>.content>.header, .ui.card>.content>.header {
     color: #eeeeee !important;
 }
 
-.ui.cards>.inverted.card .meta,
-.ui.card .meta {
+.ui.cards>.inverted.card .meta, .ui.card .meta {
     color: #eeeeee !important;
 }
